--- a/templates/sortie/detail.html.twig
+++ b/templates/sortie/detail.html.twig
@@ -58,6 +58,14 @@
                             </span>
                         </div>
                     </div>
+                    {% if sortie.messageAnnulation %}
+                    <div class="mt-4 rounded-lg border border-red-200 bg-red-50 p-4">
+                        <div class="text-sm font-semibold text-red-800">Motif d'annulation</div>
+                        <div class="mt-2 text-sm text-red-900 whitespace-pre-line">
+                            {{ sortie.messageAnnulation|nl2br }}
+                        </div>
+                    </div>
+                    {% endif %}
                     <div class="border-t border-gray-100 pt-4">
                         <div class="text-sm font-medium text-gray-500 mb-2">Description</div>
                         <div class="text-sm text-gray-700 bg-gray-50 p-3 rounded-md border border-gray-100">
