Mon travail en cours sur les sorties

--- a/templates/sortie/detail.html.twig
+++ b/templates/sortie/detail.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Détail de la sortie - {{ sortie.nom }}{% endblock %}
+{% block title %}{{ parent() }} - Détail de la sortie - {{ sortie.nom }}{% endblock %}
 
 {% block body %}
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-10">
