--- a/templates/admin/users/listing.html.twig
+++ b/templates/admin/users/listing.html.twig
@@ -54,4 +54,7 @@
         {% endfor %}
     </tbody>
 </table>
+<div class="mt-3">
+    {{ knp_pagination_render(participants) }}
+</div>
 {% endblock %}
