--- a/templates/profil/modifier.html.twig
+++ b/templates/profil/modifier.html.twig
@@ -56,16 +56,14 @@
                         {# On remplace form_row(form.pseudo) par ceci #}
                         {# Composant Générique pour le PSEUDO #}
                         {{ component('UniqueFieldChecker', { 
-                            value: form.pseudo.vars.value, 
+                            value: form.pseudo.vars.value|default(''), 
                             fieldName: 'pseudo',
                             label: 'Pseudo',
                             errorMessage: 'Ce pseudo est déjà pris.',
                             inputName: form.pseudo.vars.full_name,
-                            initialValue: form.pseudo.vars.value
+                            initialValue: originalPseudo
                         }) }}
                         
-                        {# Sécurité : Erreurs natives Pseudo #}
-                        <div class="text-red-500 text-sm mt-1 empty:hidden">{{ form_errors(form.pseudo) }}</div>
                         {% do form.pseudo.setRendered() %}
 
                         <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
@@ -76,16 +74,14 @@
                         
                         {# Composant Générique pour l'EMAIL #}
                         {{ component('UniqueFieldChecker', { 
-                            value: form.mail.vars.value, 
+                            value: form.mail.vars.value|default(''), 
                             fieldName: 'mail',
                             label: 'Email',
                             errorMessage: 'Cet email est déjà associé à un compte.',
                             inputName: form.mail.vars.full_name,
-                            initialValue: form.mail.vars.value
+                            initialValue: originalMail
                         }) }}
                         
-                        {# Sécurité : Erreurs natives Email #}
-                        <div class="text-red-500 text-sm mt-1 empty:hidden">{{ form_errors(form.mail) }}</div>
                         {% do form.mail.setRendered() %}
                     </div>
                 </div>
