--- a/templates/admin/users/listing.html.twig
+++ b/templates/admin/users/listing.html.twig
@@ -130,9 +130,16 @@
                 </table>
             </div>
         </div>
-
-        <div class="mt-6">
+        <div class="bg-gray-50 shadow-md rounded-lg p-6 mb-8">
+            <div class="grid grid-cols-1 lg:grid-cols-12 gap-6">
+        <div class="class=flex flex-col md:flex-row justify-end items-center mb-6 text-sm text-gray-600 space-y-2 md:space-y-0 md:space-x-4">
             {{ knp_pagination_render(participants) }}
+        </div>
+
+        <div class="mt-8">
+            <a href="{{ path('app_sortie_creer') }}" class="inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+                Créer une sortie
+            </a>
         </div>
 
     </div>
